--- a/src/style/landingPage.css
+++ b/src/style/landingPage.css
@@ -10,7 +10,6 @@ body {
   background-color: #add8e6;
   font-family: "Poppins", sans-serif;
   text-shadow: 1px 1px 2px black;
- 
 }
 .text_brand {
   color: white;
@@ -32,6 +31,10 @@ body {
 /* End Navbar */
 
 /* Content */
+.container_image {
+  padding: 100px;
+  background-color: #add8e6;
+}
 .image_box {
   display: flex;
   justify-content: center;
