--- a/src/style/landingPage.css
+++ b/src/style/landingPage.css
@@ -1,6 +1,5 @@
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
   background-color: #ffffff;
@@ -13,10 +12,10 @@ body {
   text-shadow: 1px 1px 2px black;
 }
 .text_brand {
-  color: white;
+  color: #ffffff;
 }
 .text_link {
-  color: white;
+  color: #ffffff;
 }
 
 /* End Navbar */
@@ -24,22 +23,22 @@ body {
 /* Content */
 .container_content {
   background-color: #add8e6;
-  height: auto;
 }
 .image {
   height: 200px;
-  width: auto;
+
   border-radius: 50%;
 }
 .image_box {
-  margin-top: 120px;
+  padding-top: 20px;
+  margin-top: 70px;
   display: flex;
   justify-content: center;
 }
 
 .text_profile {
-  margin-left: 60px;
-  margin-top: 150px;
+  padding-left: 50px;
+  padding-top: 130px;
   font-family: "Poppins", sans-serif;
 }
 /* End Content */
@@ -70,7 +69,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 .img_card {
-  width: auto;
   height: 150px;
   object-fit: cover;
 }
@@ -90,7 +88,6 @@ body {
 }
 .logo_contact {
   height: 40px;
-  width: auto;
   margin: 10px;
 }
 /* End Contact */
